<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- facebook strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="facebook_string">facebook</string>
	<string name="mobile_number_or_email_address_string">Mobile number or email address</string>
	<string name="password_string">Password</string>
	<string name="log_in_string">Log In</string>
	<string name="forgotten_password__string">Forgotten password?</string>
	<string name="or_string">or</string>
	<string name="create_new_account_string">Create New Account</string>
	<string name="about_string">About</string>
	<string name="help_string">Help</string>
	<string name="meta_string">Meta</string>
	<string name="_2022_string">2022</string>
	<string name="more_string">More</string>
	<string name="button_ek2_string">Tr v</string>
</resources>